syntax = "proto3";
package metrics_v1;
option go_package = "./metrics_v1";
import "google/protobuf/timestamp.proto";

message NewUserRequest {}

message SpentTimeRequest {
  google.protobuf.Timestamp time = 1;
  string uuid = 2;
}

message StreamingPerformanceRequest {
  string uuid = 1;
  int32 movieId = 2;
  int32 bufferingCount = 3;
  int32 bufferingTime = 4;
  string playbackError = 5;
  int32 viewsTime = 6;
  int32 duration = 7;
}

message MetricResponse {}

enum MetricType {
  NEW_USERS = 0;
  AVG_TIME_ON_SITE = 1;
  BOUNCE_RATE = 3;
  COMMENTS = 5;
  REGISTRATIONS = 6;
  PAGE_LOAD_TIME = 7;
  ERROR_RATE = 8;
  SERVER_RESPONSE_TIME = 9;
  STREAMING_PERFORMANCE = 10;
  AVG_VIEW_DURATION = 11;
  POPULAR_GENRES = 12;
}

service MetricsV1 {
  rpc NewUser(NewUserRequest) returns (MetricResponse);
  rpc SpentTime(SpentTimeRequest) returns (MetricResponse);
  rpc StreamingPerformance(StreamingPerformanceRequest) returns (MetricResponse);
}